# dwb

./: .gitignore  CONTRIBUTING.md  LICENSE  PUBLISHING.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.chrome.json  tsconfig.json  vite.chrome.config.ts  vite.config.ts
.github/workflows/: release.yml
chrome-extension/: PopupApp.module.css  PopupApp.tsx  background.test.ts  background.ts  popup.css  popup.tsx  sidePanelState.test.ts  sidePanelState.ts  sidepanel.html
chrome-extension/hooks/: useChromeRepositories.ts
chrome-extension/public/: manifest.json
src/: App.css  App.tsx  Dashboard.module.css  Dashboard.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json5
src-tauri/capabilities/: default.json5
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  url_change_bridge.js
src/components/: CheckForUpdates.module.css  CheckForUpdates.tsx  SidebarContextMenu.module.css  SidebarContextMenu.tsx  TitleBar.module.css  TitleBar.tsx
src/hooks/: useRepositories.ts
src/lib/: constants.ts  deepWikiUrl.test.ts  deepWikiUrl.ts  repository.test.ts  repository.ts  repositorySort.ts
src/lib/repositoryPersistence/: index.ts  localStorage.ts  types.ts
src/shared/: constants.json
